--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   "dependencies": {
     "@google/genai": "^1.16.0",
     "@google/generative-ai": "^0.24.1",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-slot": "^1.2.3",
     "@sinco-lab/mcp-youtube-transcript": "^0.0.8",
+    "@xyflow/react": "^12.8.4",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dagre": "^0.8.5",
     "googleapis": "^159.0.0",
     "input-otp": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
@@ -34,6 +37,7 @@
     "play-dl": "^1.9.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "reactflow": "^11.11.4",
     "sbd": "^1.0.19",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
@@ -48,6 +52,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/dagre": "^0.7.53",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.19.11",
     "@types/node-summary": "^1.2.3",
