--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-slot": "^1.2.3",
     "@sinco-lab/mcp-youtube-transcript": "^0.0.8",
@@ -23,9 +24,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dagre": "^0.8.5",
+    "docx": "^9.5.1",
+    "file-saver": "^2.0.5",
     "googleapis": "^159.0.0",
     "input-otp": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.2",
     "lucide-react": "^0.540.0",
     "mongoose": "^8.18.0",
     "motion": "^12.23.12",
@@ -53,6 +57,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/dagre": "^0.7.53",
+    "@types/file-saver": "^2.0.7",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.19.11",
     "@types/node-summary": "^1.2.3",
